--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Certus Go</title>
 </head>
 <body>
+    <h1>Este es un encabezado</h1>
+    <p>Este es un parrafo</p>
     Certus Go 2021 - Bienvenido
+    Edwin Barrientos
 </body>
-</html></html>
+</html>
+</html>
