--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
     <h1>Este es un encabezado</h1>
     <p>Este es un parrafo</p>
     Certus Go 2021 - Bienvenido
-    Edwin Barrientos
+       <!--Aca mostrare el formulario de Venta -->  
+      
+       <!-- Comentario 1 -->
+       <!-- Comentario 2 -->
+       <!-- Comentario 3 -->
+       <h1>Cabecera 1</h1>
+       <h6>Cabecera 2</h6>
+       <il></il>
 </body>
 </html>
 </html>
