--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
        <!-- Comentario 1 -->
        <!-- Comentario 2 -->
        <!-- Comentario 3 -->
-       <h1>Cabecera 1</h1>
+       <h1 style="font-size:60em;">Cabecera 1</h1>
        <h6>Cabecera 2</h6>
        <il></il>
 </body>
