--- a/index.html
+++ b/index.html
@@ -16,8 +16,15 @@
        <!-- Comentario 2 -->
        <!-- Comentario 3 -->
        <h1 style="font-size:60em;">Cabecera 1</h1>
+       <p>Parrafo 1</p>
+       <p>parrafo 2</p>
+
        <h6>Cabecera 2</h6>
-       <il></il>
+       <p>Parrafo 3</p>
+       <p>parrafo 4</p>
+       
 </body>
 </html>
 </html>
+
+CTRL + }
