--- a/index.html
+++ b/index.html
@@ -9,23 +9,17 @@
 <body>
     <h1>Este es un encabezado</h1>
     <p>Este es un parrafo</p>
-      <!--Aca mostrare el formulario de Venta -->  
-      
-       <!-- Comentario 1 -->
-       <!-- Comentario 2 -->
-       <!-- Comentario 3 -->
-       <h1 style="font-size:60em;">Cabecera 1</h1>
-       <p>Parrafo 1</p>
-       <p>parrafo 2</p>
-       <hr>
+    <h1 style=>Cabecera 1</h1>
+    <p>Parrafo 1</p>
+    <p>parrafo 2</p>
+    <hr>
 
-       <h6>Cabecera 2</h6>
-       <p>Parrafo 3</p>
-       <p>parrafo 4</p>
-       <hr>
+    <h6>Cabecera 2</h6>
+    <p>Parrafo 3</p>
+    <p>parrafo 4</p>
+    <hr>
        
 </body>
 </html>
 </html>
 
-CTRL + }
