--- a/pagina.html
+++ b/pagina.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,13 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    <!--Aca mostrare el formulario de Venta -->  
-    CTRL + }
-    <!-- Comentario 1 -->
-    <!-- Comentario 2 -->
-    <!-- Comentario 3 -->
-    <h1>Cabecera 1</h1>
-    <h6>Cabecera 2</h6>
-    <il></il>
+    <h1>Restaurante El Dulce Pecado</h1>
+    <div style="text-align: center;">
+        <h2>Menu Economico</h2>
+        <ol>
+            <il>Entrada: Ocopa, Huancaina, Sopa de Casa</il>
+            <il>Plato de Fondo: Arroz con Pollo, Aji de Gallina</il>
+            <il>Postre: Gelatina, Mazamorra</il>
+            <il>Refresco</il>            
+        </ol>
+    </div>
 </body>
 </html>
