--- a/pagina.html
+++ b/pagina.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Restaurante El Dulce Pecado</h1>
+    <h1>Restaurante "El Dulce Pecado"</h1>
     <div style="text-align: center;">
         <h2>Menu Economico</h2>
         <ol>
