--- a/pagina.html
+++ b/pagina.html
@@ -7,14 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Restaurante "El Dulce Pecado"</h1>
+    <div>
+        <h1>Restaurante "El Dulce Pecado"</h1>
+    </div>
     <div style="text-align: center;">
         <h2>Menu Economico</h2>
         <ol>
-            <il>Entrada: Ocopa, Huancaina, Sopa de Casa</il>
-            <il>Plato de Fondo: Arroz con Pollo, Aji de Gallina</il>
-            <il>Postre: Gelatina, Mazamorra</il>
-            <il>Refresco</il>            
+            <li>Entrada: Ocopa, Huancaina, Sopa de Casa</li>
+            <li>Plato de Fondo: Arroz con Pollo, Aji de Gallina</li>
+            <li>Postre: Gelatina, Mazamorra</li>
+            <li>Refresco</li>            
         </ol>
     </div>
 </body>
