--- a/pagina.html
+++ b/pagina.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; text-align: center;">
+    <div style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;" >
         <h1>Restaurante "El Dulce Pecado"</h1>
     </div>
     <div style="text-align: center;">
