--- a/pagina.html
+++ b/pagina.html
@@ -12,12 +12,22 @@
     </div>
     <div style="text-align: center;">
         <h2>Menu Economico</h2>
-        <ol>
+        <ol style="text-align: center;">
             <li>Entrada: Ocopa, Huancaina, Sopa de Casa</li>
             <li>Plato de Fondo: Arroz con Pollo, Aji de Gallina</li>
             <li>Postre: Gelatina, Mazamorra</li>
             <li>Refresco</li>            
         </ol>
     </div>
+    <div>
+        <h2>Menu Ejecutivo</h2>
+        <ol>
+            <li>Entrada: Rocoto Relleno, Sopa a la  Minuta</li>
+            <li>Plato de Fondo: Lomo Saltado, Bife con papa</li>
+            <li>Postre: Combinado, Ranfañote</li>
+            <li>Copa de Vino</li>
+        </ol>
+    </div>
+
 </body>
 </html>
