--- a/pagina.html
+++ b/pagina.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>El Dulce Pecado</title>
 </head>
 <body>
     <div style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; text-align: center;" >
