--- a/pagina.html
+++ b/pagina.html
@@ -10,9 +10,9 @@
     <div style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; text-align: center;" >
         <h1>Restaurante "El Dulce Pecado"</h1>
     </div>
-    <div style="text-align: center;">
+    <div >
         <h2>Menu Economico</h2>
-        <ol style="text-align: center;">
+        <ol>
             <li>Entrada: Ocopa, Huancaina, Sopa de Casa</li>
             <li>Plato de Fondo: Arroz con Pollo, Aji de Gallina</li>
             <li>Postre: Gelatina, Mazamorra</li>
