--- a/pagina.html
+++ b/pagina.html
@@ -9,6 +9,7 @@
 <body>
     <div style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; text-align: center;" >
         <h1>Restaurante "El Dulce Pecado"</h1>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ_bLnPDrlPgcaJldkdmWQW-WEqzluRY1wkjA&usqp=CAU" alt="" srcset="">
     </div>
     <div >
         <h2>Menu Economico</h2>
