--- a/pagina.html
+++ b/pagina.html
@@ -7,10 +7,11 @@
     <title>El Dulce Pecado</title>
 </head>
 <body>
-    <div style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; text-align: center;" >
+    <div style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; text-align: center; display: flex; flex-direction: column;" >
         <h1>Restaurante "El Dulce Pecado"</h1>
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ_bLnPDrlPgcaJldkdmWQW-WEqzluRY1wkjA&usqp=CAU" alt="Logo Cocina" >
     </div>
+    <div ></div>
     <div >
         <h2>Menu Economico</h2>
         <ol>
