--- a/pagina.html
+++ b/pagina.html
@@ -8,8 +8,12 @@
 </head>
 <body>
     <div style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; text-align: center; display: flex; flex-direction: column;" >
-        <h1>Restaurante "El Dulce Pecado"</h1>
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ_bLnPDrlPgcaJldkdmWQW-WEqzluRY1wkjA&usqp=CAU" alt="Logo Cocina" >
+        <div>
+            <h1>Restaurante "El Dulce Pecado"</h1>
+        </div>
+        <div>x
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ_bLnPDrlPgcaJldkdmWQW-WEqzluRY1wkjA&usqp=CAU" alt="Logo Cocina" >
+        </div>
     </div>
     <div ></div>
     <div >
