--- a/pagina.html
+++ b/pagina.html
@@ -11,7 +11,7 @@
         <div>
             <h1>Restaurante "El Dulce Pecado"</h1>
         </div>
-        <div>x
+        <div style="width: 50px;">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ_bLnPDrlPgcaJldkdmWQW-WEqzluRY1wkjA&usqp=CAU" alt="Logo Cocina" >
         </div>
     </div>
