--- a/pagina.html
+++ b/pagina.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; text-align: center; display: flex; flex-direction: column;" >
-        <div>
+        <div style="width: 50px;">
             <h1>Restaurante "El Dulce Pecado"</h1>
         </div>
         <div style="width: 50px;">
