--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div>
         <ul>
             <li><a href="pagina.html">Enlace 1</a></li>
-            <li>Enlace 2</li>
+            <li><a href="https://www.wikipedia.org/">Enlace 2</a></li>
             <li>Enlace 3</li>
             <li>Enlace 4</li>
             <li>Enlace 5</li>
