--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <li><a href="pagina.html">Enlace 1</a></li>
             <li><a href="https://www.wikipedia.org/">Enlace 2</a></li>
             <li> <a href="saldo.html">Enlace 3</a></li>
+            <img src="gato.jpg" alt="Gato">
             <li>Enlace 4</li>
             <li>Enlace 5</li>
         </ul>
