--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p>Parrafo 3</p>
     <p>parrafo 4</p>
     <hr>
-    
+    <img src="gato.jpg" alt="Gato">
     <div>
         <ul>
             <li><a href="pagina.html">Enlace 1</a></li>
