--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <p>parrafo 4</p>
     <hr>
     <img src="gato.jpg" alt="Gato">
+    <button>Presione Aqui</button>
     <div>
         <ul>
             <li><a href="pagina.html">Enlace 1</a></li>
