--- a/pagina.html
+++ b/pagina.html
@@ -21,7 +21,7 @@
         <ol>
             <li>Entrada: Ocopa, Huancaina, Sopa de Casa</li>
             <li>Plato de Fondo: Arroz con Pollo, Aji de Gallina</li>
-            <li>Postre: Gelatina, Mazamorra</li>
+            <li>Cantidad Postre: Gelatina, Mazamorra</li>
             <li>Refresco</li>            
         </ol>
     </div>
@@ -30,7 +30,7 @@
         <ul>
             <li>Entrada: Rocoto Relleno, Sopa a la  Minuta</li>
             <li>Plato de Fondo: Lomo Saltado, Bife con papa</li>
-            <li>Postre: Combinado, Ranfañote</li>
+            <li>Cantidad Postre: Combinado, Ranfañote</li>
             <li>Copa de Vino</li>
         </ul>
     </div>
