--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <p>Parrafo 3</p>
     <p>parrafo 4</p>
     <hr>
-    <img src="gato.jpg" alt="Gato">
+    <div style="background-color: darkred;">Bienvenido a Certus</div>
+    <p>Carrera de TI en <span style="background-color: darkred;">Certus</span></p>
     <button>Presione Aqui</button>
     <div>
         <ul>
