--- a/pagina.html
+++ b/pagina.html
@@ -7,18 +7,25 @@
     <title>El Dulce Pecado</title>
 </head>
 <body>
-    <div style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; text-align: center; display: flex; flex-direction: column;" >
-        <div style="width: 50px;">
-            <h1>Restaurante "El Dulce Pecado"</h1>
+    <div style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; text-align: center; display: flex; flex-direction: row;" >
+        <div style="flex: 50%;text-align: right;">
+            <h1>Restaurante "El Dulce Pecado"&nbsp;&nbsp;&nbsp;</h1>
         </div>
-        <div style="width: 50px;">
+        <div style="flex: 50%; width: 50px;height: 50px;text-align: left;">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ_bLnPDrlPgcaJldkdmWQW-WEqzluRY1wkjA&usqp=CAU" alt="Logo Cocina" >
         </div>
-    </div>
-    <div ></div>
+    </div>    
+    <dl>
+        <dt>Pizpireta</dt>
+        <dd>Dicho de una mujer: Viva, pronta y aguda.</dd>
+        <dt>Pulular</dt>
+        <dd>Dicho de las personas, animales o cosas: Abundar y bullir en un lugar.</dd>
+        <dt>Concupiscencia</dt>
+        <dd>En la moral católica, deseo de bienes terrenos y, en especial, apetito desordenado de placeres deshonestos.</dd>
+      </dl>
     <div >
         <h2>Menu Economico</h2>
-        <ol>
+        <ol type="A" >
             <li>Entrada: Ocopa, Huancaina, Sopa de Casa</li>
             <li>Plato de Fondo: Arroz con Pollo, Aji de Gallina</li>
             <li>Cantidad Postre: Gelatina, Mazamorra</li>
