--- a/pagina.html
+++ b/pagina.html
@@ -32,7 +32,7 @@
             <li>Refresco</li>            
         </ol>
     </div>
-    <div>
+    <div style="display: none;" >
         <h2>Menu Ejecutivo</h2>
         <ul>
             <li>Entrada: Rocoto Relleno, Sopa a la  Minuta</li>
