--- a/multimedia.html
+++ b/multimedia.html
@@ -9,7 +9,7 @@
 <body>
     <video width="500px" height="240px" controls autoplay>
         
-        <source src="spot-savethekiss.ogv" type="video/ogv">
+        <source src="spot-savethekiss.ogv" type="video/ogg">
         <source src="" type="">
         <track></track>
         <track></track>
