--- a/multimedia.html
+++ b/multimedia.html
@@ -7,9 +7,9 @@
     <title>Ejemplos Multimedia</title>
 </head>
 <body>
-    <video width="500px" height="240px" controls autoplay>
-        
-        <source src="DOLLY.mp4" type="video/mp4">        
+    <video width="500px" height="240px" controls autoplay>        
+        <source src="es_smint_tins.mp4" type="video/mp4">        
+        <source src="es_smint_tins.ogg" type="video(ogg">        
     </video> 
     <audio controls>
         <source src="Enrico_Caruso,_Recondita_armonia_(Tosca).ogg" type="audio/ogg">
