--- a/multimedia.html
+++ b/multimedia.html
@@ -9,12 +9,14 @@
 <body>
     <video width="500px" height="240px" controls autoplay>        
         <source src="es_smint_tins.mp4" type="video/mp4">        
-        <source src="es_smint_tins.ogg" type="video(ogg">        
+        <source src="es_smint_tins.ogg" type="video/ogg">
+        <track src="sintel-de.vtt" kind="subtitles" srclang="de" label="deutch">  
+        Su navegador no soporta videos.     
     </video> 
     <audio controls>
         <source src="Enrico_Caruso,_Recondita_armonia_(Tosca).ogg" type="audio/ogg">
         <!-- <source src="horse.mp3" type="audio/mpeg"> -->
-      Your browser does not support the audio element.
+        Su navegador no soporta audio
       </audio>
 </body>
 </html>
