--- a/multimedia.html
+++ b/multimedia.html
@@ -7,10 +7,10 @@
     <title>Ejemplos Multimedia</title>
 </head>
 <body>
-    <video width="500px" height="240px" controls autoplay>        
+    <video width="500px" height="240px" controls autoplay title="Comercial">        
         <source src="es_smint_tins.mp4" type="video/mp4">        
         <source src="es_smint_tins.ogg" type="video/ogg">
-        <track src="sintel-de.vtt" kind="subtitles" srclang="de" label="deutch">  
+        <track src="sintel-de.vtt" kind="subtitles" srclang="es" label="Español">  
         Su navegador no soporta videos.     
     </video> 
     <audio controls>
