--- a/multimedia.html
+++ b/multimedia.html
@@ -10,7 +10,9 @@
     <video width="500px" height="240px" controls autoplay title="Comercial">        
         <source src="es_smint_tins.mp4" type="video/mp4">        
         <source src="es_smint_tins.ogg" type="video/ogg">
-        <track src="sintel-de.vtt" kind="subtitles" srclang="es" label="Español">  
+        <track src="sintel-es.vtt" kind="subtitles" srclang="es" label="Español">  
+        <track src="sintel-en.vtt" kind="subtitles" srclang="en" label="Ingles">  
+        <track src="sintel-por.vtt" kind="subtitles" srclang="pt" label="Portugues">  
         Su navegador no soporta videos.     
     </video> 
     <audio controls>
