--- a/trab_multimedia.html
+++ b/trab_multimedia.html
@@ -7,7 +7,7 @@
     <title>Ejercicios Multimedia</title>
 </head>
 <body>
-    <video width="500px" height="240px" controls autoplay muted>
+    <video width="500px" height="240px" controls autoplay>
         <source src="es_smint_tins.mp4" type="video/mp4">
         <source src="es_smint_tins.ogg" type="vide/ogg">
         <!-- <source> -->
