--- a/trab_multimedia.html
+++ b/trab_multimedia.html
@@ -11,6 +11,7 @@
         <source src="es_smint_tins.mp4" type="video/mp4">
         <source src="es_smint_tins.ogg" type="vide/ogg">
         <!-- <source> -->
+        <track src="sintel-es.vtt" kind="subtitles" srclang="es" label="Español">
     </video>
 </body>
 </html>
