--- a/trab_multimedia.html
+++ b/trab_multimedia.html
@@ -7,11 +7,7 @@
     <title>Ejercicios Multimedia</title>
 </head>
 <body>
-    <video width="500px" height="240px" controls autoplay>
-        <source src="es_smint_tins.mp4" type="video/mp4">
-        <source src="es_smint_tins.ogg" type="vide/ogg">
-        <!-- <source> -->
-        <track src="sintel-es.vtt" kind="subtitles" srclang="es" label="Español">
-    </video>
+    <iframe src="https://www.youtube.com/watch?v=Nj2U6rhnucI" width="956" height="538" frameborder="0">
+    </iframe>
 </body>
 </html>
