--- a/trab_multimedia.html
+++ b/trab_multimedia.html
@@ -7,7 +7,7 @@
     <title>Ejercicios Multimedia</title>
 </head>
 <body>
-    <iframe src="https://www.youtube.com/watch?v=Nj2U6rhnucI" width="956" height="538" frameborder="0">
+    <iframe src="https://www.google.com" width="956" height="538" frameborder="0">
     </iframe>
 </body>
 </html>
