--- a/trab_multimedia.html
+++ b/trab_multimedia.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lan.g="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,7 @@
     <title>Ejercicios Multimedia</title>
 </head>
 <body>
-    <iframe src="https://www.google.com" width="956" height="538" frameborder="0">
+    <iframe src="https://wordpress.com/es/" width="956" height="538" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
     </iframe>
 </body>
 </html>
